--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div style="background-color:red;">DIV1</div>
-    <header style="background-color: aqua;">HEADER</header>    
-    <section style="background-color: blue;">SECTION</section>
-    <article style="background-color: rgb(8, 255, 86);">ARTICLE</article>
-    <footer style="background-color: rgb(255, 0, 183);">FOOTER</footer>
-    <nav style="background-color: yellow;">NAV</nav>
+    <div class="div1">
+        <h1>HEY MEM SOU EU CJ MAN</h1>
+        <h2>GRAND THEFT AUTO V</h2>
+    </div>
+    <header class="header1">
+        <button>CLICK aqui S2</button>
+    </header>    
+    <section class="section1">
+        <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+        </ul>
+    </section>
+    <article class="article1">
+        <img src=./Pikachu.png>
+    </article>
+    <footer class="footer1">
+        <span class="textSize"><em>SOU EU <strong>CJ MAN</strong> S2</em></span>
+    </footer>
+    <nav class="nav1">
+        <a href="https://www.udesc.br" target="_blank">click aqui -> IR PARA UDESC</a>
+    </nav>
 </body>
 </html>
